# deerclaw

./: .gitignore  CHANGELOG.md  Cargo.toml  SECURITY.md
.github/workflows/: desktop-release.yml
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: config-reference.md
scripts/: build_desktop.sh
scripts/release/: cut_release_tag.sh  publish_desktop_local.sh
src/: lib.rs
src/agent/: loop_.rs  prompt.rs
src/approval/: mod.rs
src/channels/: mod.rs
src/config/: mod.rs  schema.rs
src/cost/: tracker.rs
src/cron/: scheduler.rs
src/gateway/: api.rs  mod.rs  sse.rs  ws.rs
src/integrations/: registry.rs
src/memory/: sqlite.rs  traits.rs
src/onboard/: wizard.rs
src/providers/: anthropic.rs  bedrock.rs  compatible.rs  copilot.rs  gemini.rs  glm.rs  mod.rs  ollama.rs  openai.rs  openai_codex.rs  openrouter.rs  reliable.rs  router.rs  telnyx.rs  traits.rs
src/security/: policy.rs
src/skills/: adapter.rs  mod.rs
src/tools/: browser.rs  browser_open.rs  canvas.rs  composio.rs  content_search.rs  cron_add.rs  cron_remove.rs  cron_run.rs  cron_update.rs  delegate.rs  file_edit.rs  file_read.rs  file_write.rs  git_operations.rs  glob_search.rs  http_request.rs  image_info.rs  memory_forget.rs  memory_recall.rs  memory_store.rs  mod.rs  model_routing_config.rs  office_ops.rs  office_read.rs  onepassword.rs  (+8 more)
tests/: config_schema.rs  openai_codex_vision_e2e.rs
web/: index.html  package-lock.json  package.json
(+39 files in other folders)
